# meal-tracker-oop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
command/: addcommand.cpp  addcommand.h  clearcommand.h  command.h  removecommand.cpp  removecommand.h  updatecommand.cpp  updatecommand.h
controller/: Controller.cpp  Controller.h
domain/: Meal.cpp  Meal.h
filter/: FilterStrategy.h  andfilter.cpp  andfilter.h  filterbycaloriesrange.cpp  filterbycaloriesrange.h  filterbyname.cpp  filterbyname.h  filterbytype.cpp  filterbytype.h  orfilter.cpp  orfilter.h
repository/: CSVRepository.cpp  CSVRepository.h  IRepository.h  jsonrepository.cpp  jsonrepository.h
tests/: test_main.cpp
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
